--- a/posts/example-post-1.mdx
+++ b/posts/example-post-1.mdx
@@ -2,9 +2,8 @@
 type: Post
 title: Terms of Service
 description: >-
-  A style guide for a website is a set of design standards that define the look,
-  feel, and behavior of a digital product, ensuring consistency and cohesion
-  across all pages and elements.
+  By making a Kitiguar of your own, you agree to the terms below. If you break
+  any of the rules, you will be publicly blacklisted with the app
 date: '2025-01-06'
 ---
 A style guide for a website is a set of design standards that define the look, feel, and behavior of a digital product, ensuring consistency and cohesion across all pages and elements. It typically includes guidelines for colors, typography, spacing, buttons, icons, and imagery, as well as instructions on voice and tone for content.
