example-post-1.mdx: updated markdown_content

--- a/posts/example-post-1.mdx
+++ b/posts/example-post-1.mdx
@@ -40,4 +40,4 @@ date: '2025-02-20'
 
 This reference sheet was requested by Kayla to Cancri aka CancriPlasm as an art trade. You must read the little notes on the sheet carefully because it has some info about the Kitiguars.
 
-![Image alt text](/public/images/cancriplasm_20256753016710.png "Image drawn by CancriPlasm from Toyhouse")
+![](/images/cancriplasm_20256753016710.png)
