example-post-1.mdx: updated markdown_content

--- a/posts/example-post-1.mdx
+++ b/posts/example-post-1.mdx
@@ -22,7 +22,7 @@ date: '2025-02-20'
 
 *   Do not create multiple accounts to participate in raffles, events and anything adopt related.
 *   When adopting a Kitiguar, you must abide by the species rules and the person whom you are adopting them from.
-*   Every artist has the right to refuse sale.
+*   Every artist has the right to refuse sale or trade.
 *   You may sell a Kitiguar or give them away. As long as there is credit back to this website, and to the species and creator of the design.
 *   It's strictly not recommended to post Kitiguars with unknown credits to either the design creation or its content.
 *   When you buy an adopt, its value stays the same as what you bought them for. Though it can only increase value with art pieces separate from the ones that came with the adoptable.
