example-post-1.mdx: updated markdown_content

--- a/posts/example-post-1.mdx
+++ b/posts/example-post-1.mdx
@@ -38,6 +38,6 @@ date: '2025-02-20'
 
 ## Official Reference
 
-This reference sheet was requested by Kayla to Cancri aka CancriPlasm as an art trade. You must read the little notes on the sheet carefully because it has some info about the Kitiguars.
+This reference sheet was requested by Kayla to Cancri aka [CancriPlasm](https://toyhou.se/CancriPlasm) as an art trade. You must read the little notes on the sheet carefully because it has some info about the Kitiguars.
 
 ![](/images/cancriplasm_20256753016710.png)
