example-post-1.mdx: updated markdown_content

--- a/posts/example-post-1.mdx
+++ b/posts/example-post-1.mdx
@@ -41,3 +41,14 @@ date: '2025-02-20'
 This reference sheet was requested by Kayla to Cancri aka [CancriPlasm](https://toyhou.se/CancriPlasm) as an art trade. You must read the little notes on the sheet carefully because it has some info about the Kitiguars.
 
 ![](/images/cancriplasm_20256753016710.png)
+
+## The Masterlist
+
+*   It's highly recommended to submit your Kitiguar to the masterlist via Trello because Kayla loves seeing her species coming to life! But she cannot control if you want to keep your Kitiguar private. Otherwise, contact Kayla directly on submitting your Kitiguar to the masterlist if you wish!
+
+*   You are responsible for informing Kayla on updates on your desired Kitiguar if its ownership has changed, your username or social has changed, new masterlist image, etc.
+
+*   [The Official Masterlist](https://trello.com/b/dlHNogWs/nubreolan-masterlist)
+
+*   Don't worry about writing your Kitiguar's traits down, Kayla will take care of that!
+
