--- a/posts/example-post-1.mdx
+++ b/posts/example-post-1.mdx
@@ -15,7 +15,7 @@ date: '2025-02-20'
 *   Kayla is not responsible if you are scammed by someone we may not know selling Kitiguars.
 *   CBCs also known as Character based Characters are allowed. However, just make sure they’re different enough to avoid copyright. Kitiguars based on real life people are not allowed, but you may make yourself a Kitiguar "sona". But if you have proof of written permission of a subject in question, you must provide it.
 *   Discrimination of any kind is not allowed. This is the unjustified and harmful treatment of people of different categories, especially on the grounds of ethnicity, age, sex or disability is not allowed and will result in an immediate blacklist and PSA. This includes "hate art/speech" or just bullying in general. Respect everyone!
-*   Anything that may put (feral) animals and/or minors in compromising (sexual) situations are not allowed here. If something like that is posted here it will result in an instant blacklist, PSA and report.
+*   Anything that may put (feral) animals and/or minors in compromising (sexual) situations are not allowed. If something like that is made it will result in an instant blacklist, PSA and report.
 *   Do not make NSFW for your feral "canon" versions of your Kitiguars! You may have NSFW for only anthro and/or human(oid) AU versions, but the art must be filtered so minors don't see it.
 
 ## Adopts and Monetary Values
